force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>Int-{0000}</displayFormat>
        <label>Nome da Interação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>