force-app/main/default/objects/Interaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>