force-app/main/default/objects/Interaction__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>Tipo de Erro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sistema</fullName>
            </value>
            <value>
                <fullName>Dados do cliente</fullName>
            </value>
            <value>
                <fullName>Produto</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>