force-app/main/default/objects/Interaction__c/fields/InteractionURL__c.field-meta.xml
<CustomField>
    <fullName>InteractionURL__c</fullName>
    <formula>$Setup.InteractionLink__c.InteractionLink__c&amp;Id&amp;&quot;/&quot;&amp;&quot;view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InteractionURL</label>
    <type>Text</type>
</CustomField>