force-app/main/default/objects/Interaction__c/fields/OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>OpeningDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Data de Abertura</label>
    <type>Date</type>
</CustomField>