force-app/main/default/objects/Interaction__c/fields/OperatorEmail__c.field-meta.xml
<CustomField>
    <fullName>OperatorEmail__c</fullName>
    <description>Exibe o e-mail do criador do registro</description>
    <formula>CreatedBy.Email</formula>
    <label>E-mail Operador</label>
    <type>Text</type>
</CustomField>