force-app/main/default/objects/Interaction__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DadosdoPID</fullName>
                <label>Dados do PID</label>
            </value>
            <value>
                <fullName>MuraldeAvisos</fullName>
                <label>Mural de Avisos</label>
            </value>
            <value>
                <fullName>Endereco</fullName>
                <label>Endereço</label>
            </value>
            <value>
                <fullName>ContasdeFaturamento</fullName>
                <label>Contas de Faturamento</label>
            </value>
            <value>
                <fullName>Interacoes</fullName>
                <label>Interações</label>
            </value>
            <value>
                <fullName>HistoricodeContatos</fullName>
                <label>Histórico de Contatos</label>
            </value>
            <value>
                <fullName>HistoricodeFaturas</fullName>
                <label>Histórico de Faturas</label>
            </value>
            <value>
                <fullName>ProdutosContratados</fullName>
                <label>Produtos Contratados</label>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>