force-app/main/default/objects/Interaction__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improcedente</fullName>
            </value>
            <value>
                <fullName>Ajuste total de base de dados</fullName>
                <label>Ajuste Total de Base de Dados</label>
            </value>
            <value>
                <fullName>Ajuste pontual de base de dados</fullName>
                <label>Ajuste Pontual de Base de Dados</label>
            </value>
            <value>
                <fullName>Correção de código</fullName>
                <label>Correção de Código</label>
            </value>
            <value>
                <fullName>Nova funcionalidade</fullName>
                <label>Nova Funcionalidade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>