force-app/main/default/objects/Interaction__c/fields/SupervisorEmail__c.field-meta.xml
<CustomField>
    <fullName>SupervisorEmail__c</fullName>
    <label>Email Supervisor</label>
    <type>Email</type>
</CustomField>