force-app/main/default/objects/Interaction__c/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <description>Utilizado para reclamações, sugestões e elogios</description>
    <label>Feedback</label>
</RecordType>