force-app/main/default/objects/Interaction__c/recordTypes/ProblemaTecnico.recordType-meta.xml
<RecordType>
    <fullName>ProblemaTecnico</fullName>
    <active>true</active>
    <description>Utilizado para reporte de problemas em geral da ferramenta</description>
    <label>Problema Técnico</label>
</RecordType>