force-app/main/default/objects/Interaction__c/validationRules/ChangeStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeStatus</fullName>
    <active>true</active>
    <errorConditionFormula>Case(PRIORVALUE(Status__c),
&apos;Aberto&apos;,1,
&apos;Escalado&apos;,2,
&apos;Concluido&apos;,3, 3) &gt; 
Case(Status__c,
&apos;Aberto&apos;,1,
&apos;Escalado&apos;,2,
&apos;Concluido&apos;,3, 3)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Não é permitida a alteração para um status anterior</errorMessage>
</ValidationRule>