force-app/main/default/objects/Interaction__c/validationRules/CloseOrEscalateStatusValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseOrEscalateStatusValidation</fullName>
    <active>true</active>
    <description>Verifica que o usuário possui permissão para concluir ou escalar interações.</description>
    <errorConditionFormula>AND (RecordType.DeveloperName = &apos;ProblemaTecnico&apos;, 
					TEXT(Status__c) &lt;&gt; &apos;Aberto&apos;,
					TEXT(Status__c) &lt;&gt; NULL,
						NOT($Permission.CloseAndEscalateInteractions)
						)</errorConditionFormula>
    <errorMessage>Não possui permissão para editar o Status do Problema técnico com o valor colocado.</errorMessage>
</ValidationRule>