force-app/main/default/objects/Interaction__c/validationRules/SubstatusValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SubstatusValidation</fullName>
    <active>true</active>
    <description>Se o usuário não possui permissão de edição do substatus para valores &lt;&gt; de Improcedente, o sistema apresenta erro.</description>
    <errorConditionFormula>AND 
    (
    RecordType.DeveloperName = &apos;ProblemaTecnico&apos;, 
				AND(
								TEXT(SubStatus__c) &lt;&gt; NULL, 
								TEXT(SubStatus__c)&lt;&gt; &apos;Improcedente&apos;,
								NOT($Permission.EditInteractionsAtAllSubstatus)
								)
					)</errorConditionFormula>
    <errorMessage>Não possui permissão para Editar o campo Substatus com o valor colocado.</errorMessage>
</ValidationRule>