force-app/main/default/objects/Interaction__c/listViews/MinhasInteracoes.listView-meta.xml
<ListView>
    <fullName>MinhasInteracoes</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas interações</label>
</ListView>